package path fix

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "version": "4.0.1",
-  "name": "push/functions",
+  "version": "4.0.3",
+  "name": "push/helpers",
   "type": "library",
   "description": "Helper functions internally Push E.",
   "keywords": ["relevant","tags","go","here"],
@@ -17,6 +17,7 @@
     "predis/predis": "v2.2.2",
     "ext-openssl": "*",
     "gnikyt/basic-shopify-api": "11.0.0",
+    "push/helpers": "4.0.2",
     "ext-mysqli": "*",
     "ext-curl": "*"
   },
